main.tf
# Define the AWS provider configuration.
provider "aws" {
  region = "us-east-1"  # Replace with your desired AWS region.
}


resource "aws_key_pair" "example" {
  key_name   = "terraform-demo-abhi"  # Replace with your desired key name
  public_key = file("~/.ssh/id_rsa.pub")  # Replace with the path to your public key file
}

resource "aws_vpc" "myvpc" {
  cidr_block = var.cidr
}

resource "aws_subnet" "sub1" {
  vpc_id                  = aws_vpc.myvpc.id
  cidr_block              = "10.0.0.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "RT" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.sub1.id
  route_table_id = aws_route_table.RT.id
}

resource "aws_security_group" "webSg" {
  name   = "web"
  vpc_id = aws_vpc.myvpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-sg"
  }
}

resource "aws_s3_bucket" "s3_bucket" {
  bucket = var.S3 # change this name at variable.tf file
}

resource "aws_instance" "server" {
  ami                    = var.images
  instance_type          = lookup(var.Instance_type,terraform.workspace,"t2.micro")
  #key_name      = aws_key_pair.example.key_name
  vpc_security_group_ids = [aws_security_group.webSg.id]
  subnet_id              = aws_subnet.sub1.id

  # connection {
  #   type        = "ssh"
  #   user        = "ubuntu"  # Replace with the appropriate username for your EC2 instance
  #   private_key = file("~/.ssh/id_rsa")  # Replace with the path to your private key
  #   host        = self.public_ip
  # }

  # File provisioner to copy a file from local to the remote EC2 instance
  # provisioner "file" {
  #   source      = "app.py"  # Replace with the path to your local file
  #   destination = "/home/ubuntu/app.py"  # Replace with the path on the remote instance
  # }

  # provisioner "remote-exec" {
  #   inline = [
  #     "echo 'Hello from the remote instance'",
  #     "sudo apt update -y",  # Update package lists (for ubuntu)
  #     "sudo apt-get install -y python3-pip",  # Example package installation
  #     "cd /home/ubuntu",
  #     "sudo pip3 install flask",
  #     "sudo python3 app.py &",
  #   ]
  # }

  tags = {
    Name = var.EKS
  }
}

resource "aws_instance" "server2" {
  ami                    = var.images
  instance_type          = lookup(var.Instance_type,terraform.workspace,"t2.micro")
  #key_name      = aws_key_pair.example.key_name
  vpc_security_group_ids = [aws_security_group.webSg.id]
  subnet_id              = aws_subnet.sub1.id

  tags = {
    Name = var.Jenkins
  }
}

resource "aws_instance" "server3" {
  ami                    = var.images
  instance_type          = lookup(var.Instance_type,terraform.workspace,"t2.micro")
  #key_name      = aws_key_pair.example.key_name
  vpc_security_group_ids = [aws_security_group.webSg.id]
  subnet_id              = aws_subnet.sub1.id

  tags = {
    Name = var.Ansible
  }
}

resource "aws_dynamodb_table" "terraform_lock" {
  name           = var.terraform
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "LockID"

  attribute {
    name = "LockID"
    type = "S"
  }
}
